fix: keep the code compatible with Java 8 (#145)